# Project-Aaji

./: .gitignore  GUVI_TESTING_INSTRUCTIONS.md  HACKATHON_README.md  README.md  constitution.md  guvi_submission_details.md  package-lock.json  plan.md  pyproject.toml  rabbit.md  render.yaml  requirements.txt  spec.md
.agent/: rules.md
.agent/workflows/: simulation_test.md
backend/: Dockerfile  requirements.txt  ruff.toml
backend/src/: graph.py  main.py  prompts.py  requirements.txt  rust_core.rs  schemas.py  utils.py
backend/tests/: check_gemini3.py  check_models.py  debug_gemini.py  list_models.py  quick_diagnosis.py  simulate_scam.py  test_gemini_active.py  test_guvi_comprehensive.py  test_guvi_exact.py  test_guvi_flow.py  test_health.py  test_intelligence_continuous.py  test_multi_turn.py  test_public_url.py  test_simulator.py
backend/tools/: dev_tunnel.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: Connections.jsx  Dashboard.jsx  LiveFeed.jsx
src/: graph.py  main.py  prompts.py  schemas.py  utils.py
tests/: debug_logic.py  test_gemini_connection.py  verify_deployment.py
