[project]
name = "project-aaji"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
# Top-level settings
line-length = 120

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "S",   # Bandit (Security)
    "B",   # Bugbear
    "I",   # Isort
]
# Ignore rules for Hackathon speed
ignore = [
    "E501", # Line too long
    "S105", # Hardcoded password
    "F401", # Unused imports
    "F841", # Unused variables
    "B008", # Function call in argument defaults
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow assert in tests
